removed unused files

--- a/index.html
+++ b/index.html
@@ -1,12 +1,15 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>4Kreative</title>
+  <link href="https://fonts.googleapis.com/css?family=Josefin+Sans:300,400,400i|Nunito:300,300i" rel="stylesheet" />
+  <link rel="stylesheet" href="css/style.css" />
+  <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+  <link rel="shortcut icon" href="img\logo4k_si0_icon.ico" type="image/x-icon">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Web Design and Development Services | 4Kreative</title>
   <meta name="description"
-    content="At 4Kreative we build bespoke websites to help our clients push their businesses further online. Whether it's simple Blog or an Eccomerce Site. I preach Secure, DRY & Structured development!">
+    content="At 4Kreative we build bespoke websites to help our clients push their businesses further online. Whether it's simple Blog or an Eccommerce Site. I preach Secure, DRY & Structured development!">
   <meta name="keywords"
     content="4Kreative, web development, design, fullstack, ecommerce, seo, Boston, MA, Clearwater, FL USA">
   <meta name="author" content="Taras Kurilo, Ivan Perun">
@@ -23,17 +26,15 @@
   <meta property="og:type" content="website">
   <meta property="og:title" content="4Kreative Digital Media Marketing Agency">
   <meta property="og:description"
-    content="At 4Kreative we build bespoke websites to help our clients push their businesses further online. Whether it's simple Blog or an Eccomerce Site. I preach Secure, DRY & Structured development!. Contact me now.">
+    content="At 4Kreative we build bespoke websites to help our clients push their businesses further online. Whether it's simple Blog or an Eccommerce Site. I preach Secure, DRY & Structured development!. Contact me now.">
   <meta property="og:url" content="https://www.4kreative.co/">
   <meta property="og:site_name"
-    content="4Kreative | Digital Media Marketing Agency, Web Developent, Design, Ecommerce in Boston &amp; MA &amp; & Clearwater &amp; FL &amp; USA">
+    content="4Kreative | Digital Media Marketing Agency, Web Development, Design, Ecommerce in Boston &amp; MA &amp; & Clearwater &amp; FL &amp; USA">
   <meta property="og:image" content="https://4kreative.co/img/logo.png">
   <meta property="og:image:secure_url" content="https://4kreative.co/img/logo.png">
   <meta property="og:image:width" content="960">
   <meta property="og:image:height" content="720">
   <meta property="og:image:alt" content="4 Kreative Digital Media Marketing Agency">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-  <link rel="stylesheet" href="assets/css/styles.css">
   <!-- Google Structured Data Rich Snippet Review Schema -->
   <script type="application/ld+json">
     {
@@ -88,7 +89,7 @@
       "@type": "WebSite",
       "@id": "#website",
       "url": "https://4kreative.co/",
-      "name": "4Kreative | Digital Media Marketing Agency ,Web Developement, Design, SEO & Eccomerce in USA &amp; Stoughton &amp; Clearwater",
+      "name": "4Kreative | Digital Media Marketing Agency ,Web Developement, Design, SEO & Ecommerce in USA &amp; Stoughton &amp; Clearwater",
       "description": "I build bespoke websites to help my clients push their businesses further online.",
       "publisher": "Taras Kurilo, Ivan Perun",
       "potentialAction": {
@@ -121,96 +122,232 @@
   </script>
 </head>
 
-<body>
+<body class="container">
+  <header class="header">
+    <img src="img\logo4k.png" alt="4KREATIVE logo" class="header__logo" />
 
-  <div class="screen-wipe-top"></div>
-  <div class="screen-wipe-bottom"></div>
-  <div id="barba-wrapper">
-    <div class="barba-container">
-      <!-- ##### HEADER ##### -->
-      <header class="header-home">
-        <div class="header-logo">
-          <a class="logo" href="index.html">
-            <img src="assets\img\logo4k.png" alt="4KREATIVE">
-          </a>
-        </div>
-        <div class="nav-icon">
-          <span></span>
-          <span></span>
-          <span></span>
-        </div>
-      </header>
-
-      <!-- Full Menu -->
-      <div class="full-menu">
-        <div class="fullmenu-content">
-          <ul class="page-menu">
-            <li><a class="active" href="index.html">Home</a></li>
-            <li><a href="about.html">About</a></li>
-            <li><a href="services.html">Services</a></li>
-            <li><a href="work.html">Work</a></li>
-            <li><a href="contact.html">Contact</a></li>
-            <div class="social">
-              <li><a href="#1"><i class="fa_menu fa fa-twitter fa-2x"></i></a></li>
-              <li><a href="#2"><i class="fa_menu fa fa-facebook fa-2x"></i></a></li>
-              <li><a href="#3"><i class="fa_menu fa fa-envelope fa-2x"></i></a></li>
-            </div>
-          </ul>
-        </div>
-        <a href="#0" class="modal-close"></a>
-      </div>
-      <div class="cd-transition-layer">
-        <div class="bg-layer"></div>
-      </div><!-- Ink Transition -->
-      <!-- ##### LANDING PAGE ##### -->
-      <section class="hero">
-        <div class="kreative">4KREATIVE</div>
-        <div class="side__bar">
-          <svg class="line" height="6" width="40">
-            <line style="stroke:#3ee7d6;;stroke-width:2" x1="0" x2="30" y1="0" y2="0"></line>
-          </svg> Welcome
-        </div>
-        <ul class="social__main_list">
-          <li class="social__main">
-          <li><a href="#"><i class="fa fa-twitter fa-2x"></i></a></li>
-          <li><a href="#"><i class="fa fa-facebook fa-2x"></i></a></li>
-          <li><a href="#"><i class="fa fa-envelope fa-2x"></i></a></li>
-          </li>
-        </ul>
-        <div class="background-image"></div>
-        <div class="hero-content-area">
-          <h1 class="reveal"><span>Your Ideas</span></h1>
-          <h1 class="reveal" id="revTwo"><span>Brought To Life</span></h1>
-          <div class="typing">
-            <span class="typer" id="main"
-              data-words="Websites That Drive Businness, Powerful SEO Marketing, Dedicated to Your Success"
-              data-colors="#333" data-delay="86" data-deleteDelay="3000"></span>
-            <span class="cursor" data-owner="main"></span>
-          </div>
-        </div>
-        <div class="buttons main_page_buttons">
-          <div class="button_main" id="services_btn">
-            <a href="#">
-              Services
-            </a>
-          </div>
-          <div class="button_main" id="contact_btn">
-            <a href="#">
-              Contact Us
-            </a>
-          </div>
-        </div>
-      </section>
+    <h3 class="header__big ">4KREATIVE</h3>
+    <h1 class="header__ideas reveal"><span>Your Ideas</span></h1>
+    <h1 class="header__brought reveal" id='revTwo'><span>Brought To Life</span></h1>
+    <div class="header__typing">
+      <span class="typer" id="main"
+        data-words="Websites That Drive Businness, Powerful SEO Marketing, Dedicated to Your Success" data-colors="#333"
+        data-delay="86" data-deleteDelay="3000"></span>
+      <span class="cursor" data-owner="main"></span>
     </div>
+    <a href="#contact">
+      <button class="header__btn btn main_btn">Contact Us</button>
+    </a>
+
+    </div>
+  </header>
+  <div class="bg-video">
+    <video class="bg-video__content" poster="img/bg_services.jpg">
+      Your browser is not supported!
+    </video>
   </div>
+  <section class="work">
+    <h3 class="heading-1">Recent Work</h3>
+    <div class="work__list">
+      <div class="work__details" data-aos="fade-right">
+        <h4 class="heading-4 heading-4--light"><a href="https://thelightwalk.com/" target="_blank">The Light
+            Walk</a></h4>
+        <h5 class="heading-5">Website Design & Development</h5>
+        <p class="work__details">
+          The Light Walk is a small business that specializes in Orthopedic, Therapeutic, and Diabetic Shoes. At
+          4Kreative we helped The Light Walk by building an online presence to drive traffic and conversions with their
+          new custom built website.
+        </p>
+        <a href="https://thelightwalk.com/" target="_blank">
+          <button class="work__button btn">Visit Website </button>
+        </a>
+
+      </div>
+      <a href="https://thelightwalk.com/" target="_blank">
+        <img src="img/lightmockup-min.png" alt="Work 1" class="work__img" data-aos="fade-up">
+
+      </a>
 
 
-  <script src="assets/js/vendor/jquery-2.1.4.min.js"></script>
-  <script src="assets/js/vendor/barba.min.js" type="text/javascript"></script>
-  <script src="assets/js/transition.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.0.2/TweenMax.min.js"></script>
-  <script src="assets/js/script.js"></script>
-  <script src="assets/js/typer.js"></script>
+
+
+      <div class="work__details" data-aos="fade-right">
+        <h4 class="heading-4 heading-4--light"><a href="https://blcremationsystems.com/" target="_blank">B&L Cremation
+            Systems</a></h4>
+        <h5 class="heading-5">Website Development & SEO Strategy</h5>
+        <p class="work__details">B&L Cremation Systems is the largest family-owned, independent crematory manufacturer
+          in the world.
+          We helped them create a new and dynamic website focusing on great user experience and accessibility. With
+          strategic SEO and Digital marketing we were able to effectively increase traffic and sales.
+
+        </p>
+        <a href="https://blcremationsystems.com/" target="_blank">
+          <button class="work__button btn">Visit Website </button>
+        </a>
+
+      </div>
+      <a href="https://blcremationsystems.com/" target="_blank">
+        <img src="img/b&lmockup-min.png" alt="Work 2" class="work__img" data-aos="fade-up">
+
+      </a>
+
+
+
+      <div class="work__details" data-aos="fade-right">
+        <h4 class="heading-4 heading-4--light"><a href="https://www.designershopp.com/"
+            target="_blank">Designershopp</a></h4>
+        <h5 class="heading-5">Website Development & Ecommerce</h5>
+        <p class="work__details">The Designershopp is an online clothing retailer. The company has been significantly
+          growing, and needed our help with improving and redesigning their ecommerce website. We created an online
+          store and an easy
+          shopping experience for the users, further driving growth and sales.
+        </p>
+        <a href="https://www.designershopp.com/" target="_blank">
+          <button class="work__button btn">Visit Website </button>
+        </a>
+
+      </div>
+      <a href="https://www.designershopp.com/" target="_blank">
+        <img src="img/designmockup-min.png" alt="Work 3" class="work__img" data-aos="fade-up">
+
+      </a>
+
+
+
+    </div>
+  </section>
+  <div class="about__pictures">
+    <!-- <img src="img/img1.jpg" alt="Code" class="about__img--1" />
+    <img src="img/img5.jpg" alt="Design" class="about__img--2" /> -->
+  </div>
+  <div class="about__content">
+    <h3 class="heading-3 mb-sm-1">
+      Creative and technical professionals ready to create
+      your next big idea!
+    </h3>
+    <h2 class="heading-2 heading-2--dark mb-md">
+      What We Do
+    </h2>
+    <p class="about__text" data-aos="fade-right" data-aos-offset="120" data-aos-duration="500">
+      <span class="bold">Discover:</span> Gather requirements, organize and plan
+      the project
+    </p>
+    <p class="about__text" data-aos="fade-right" data-aos-offset="120" data-aos-duration="600">
+      <span class="bold">Design:</span> Our team collaborates with you to
+      creatively design your brand
+    </p>
+    <p class="about__text" data-aos="fade-right" data-aos-offset="120" data-aos-duration="700">
+      <span class="bold">Develop:</span> Prototypes and alpha version of the
+      project are set for approval
+    </p>
+    <p class="about__text" data-aos="fade-right" data-aos-offset="120" data-aos-duration="800">
+      <span class="bold">Deploy:</span> Final project review to full satisfaction and officially launched
+    </p>
+
+  </div>
+  <section class="services">
+    <div class="service" data-aos="fade-right" data-aos-offset="120" data-aos-duration="800">
+      <svg class="service__icon">
+        <use xlink:href="img/sprite.svg#icon-mobile"></use>
+      </svg>
+      <h4 class="heading-4 heading-4--dark">Custom Websites</h4>
+      <p class="service__text">
+        <span class="services_all">Bring it to life</span><br>
+        From your ideas to the world, we create beautiful and engaging online experiences.
+        You want your website to work in all situations, it has to load, look professional and most of all,
+        just works. Whether it's a simple blog, landing page, or a fully functional
+        Ecommerce Site, we can make it.
+      </p>
+    </div>
+    <div class="service" data-aos="fade-right" data-aos-offset="180" data-aos-duration="1000">
+      <svg class="service__icon">
+        <use xlink:href="img/sprite.svg#icon-presentation"></use>
+      </svg>
+      <h4 class="heading-4 heading-4--dark">Content & SEO</h4>
+      <p class="service__text">
+        <span class="services_all">Plan and execute</span><br>
+        In today's digital world a highly effective search engine optimization
+        and Internet marketing strategies are a must to drive more customers to your site.
+        Increase your search engine visibility to drive qualified traffic to your website with high quality content and
+        search visibility.
+      </p>
+    </div>
+    <div class="service" data-aos="fade-right" data-aos-offset="120" data-aos-duration="800">
+      <svg class="service__icon">
+        <use xlink:href="img/sprite.svg#icon-tools"></use>
+      </svg>
+      <h4 class="heading-4 heading-4--dark">Branding & Design</h4>
+      <p class="service__text">
+        <span class="services_all">Tell your story</span><br>
+        Your brand identity helps present your company, clarify your mission and values, and stand out from your
+        competition. Your brand must use strategic designs that stand out from the crowd, provide effective
+        communication, and gets your message across to your target audience.
+      </p>
+    </div>
+    <div class="service" data-aos="fade-right" data-aos-offset="180" data-aos-duration="1000">
+      <svg class="service__icon">
+        <use xlink:href="img/sprite.svg#icon-megaphone"></use>
+      </svg>
+      <h4 class="heading-4 heading-4--dark">Digital Marketing</h4>
+      <p class="service__text">
+        <span class="services_all">Get out there</span><br>
+        Drive brand awareness and engagement through organic and paid social
+        campaigns. Leverage top social strategies to grow a
+        following and gain valuable insight into your customers.
+        Build highly segmented email campaigns that nurture leads into paying
+        customers.
+      </p>
+    </div>
+  </section>
+  <section class="contact" id="contact">
+    <h3 class="heading-2 mb-sm"><span class="cnt">Contact</span></h3>
+    <form class="contact_form" action="https://formspree.io/mail.4kreative@gmail.com" method="POST">
+      <div class="form__group">
+        <input name="name" type="text" class="form__input" placeholder="Full name" id="name" required="required" />
+        <label for="name" class="form__label">Full name</label>
+      </div>
+
+      <div class="form__group">
+        <input name="email" name="_replyto" type="email" class="form__input" placeholder="Email address" id="email"
+          required="required" />
+        <label for="email" class="form__label">Email address</label>
+      </div>
+
+      <div class="form__group">
+        <textarea name="message" rows="6" class="form__input" id="message" name="message"
+          placeholder="Tell us about your project (Scope, timeline, budget, etc." name="message"
+          required="required"></textarea>
+        <label for="message" class="form__label"> Message</label>
+      </div>
+
+      <button class="form__btn btn">Send Request!</button>
+
+    </form>
+
+  </section>
+  <footer class="footer">
+    <ul class="nav">
+      <!-- <li class="nav__item">
+        <a href="#" class="nav__link">Privacy Policy</a>
+      </li>
+
+      <li class="nav__item"><a href="#" class="nav__link">Contact us</a></li>
+
+      <li class="nav__item">
+        <a href="#" class="nav__link">Terms Of Service</a>
+      </li>
+    </ul> -->
+    <p class="copyright">
+      &copy; Copyright 2019 by 4KREATIVE.
+    </p>
+  </footer>
+  <script src="js/typer.js"></script>
+  <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+  <script>
+    AOS.init({
+      duration: 1200,
+    });
+  </script>
 </body>
 
 </html>
