--- a/index.html
+++ b/index.html
@@ -343,11 +343,7 @@
   </footer>
   <script src="js/typer.js"></script>
   <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
-  <script>
-    AOS.init({
-      duration: 1200,
-    });
-  </script>
+  <script>AOS.init({duration: 1200,});</script>
 </body>
 
 </html>
