--- a/index.html
+++ b/index.html
@@ -121,11 +121,9 @@
     gtag('config', 'UA-134678695-1');
   </script>
 </head>
-
 <body class="container">
   <header class="header">
     <img src="img\logo4k.png" alt="4KREATIVE logo" class="header__logo" />
-
     <h3 class="header__big ">4KREATIVE</h3>
     <h1 class="header__ideas reveal"><span>Your Ideas</span></h1>
     <h1 class="header__brought reveal" id='revTwo'><span>Brought To Life</span></h1>
@@ -138,7 +136,6 @@
     <a href="#contact">
       <button class="header__btn btn main_btn">Contact Us</button>
     </a>
-
     </div>
   </header>
   <div class="bg-video">
@@ -161,16 +158,12 @@
         <a href="https://thelightwalk.com/" target="_blank">
           <button class="work__button btn">Visit Website </button>
         </a>
-
       </div>
       <a href="https://thelightwalk.com/" target="_blank">
-        <img src="img/lightmockup-min.png" alt="Work 1" class="work__img" data-aos="fade-up">
-
+        <img srcset="img/lightmockup-min-small.png 600w, img/lightmockup-min.png1000w"
+          sizes="(max-width: 56.25em) 88vw, (max-width: 37.5em) 86vw, 1000px" alt="Work 2" class="work__img" data-aos="fade-up"
+          src="img/lightmockup-min.png">
       </a>
-
-
-
-
       <div class="work__details" data-aos="fade-right">
         <h4 class="heading-4 heading-4--light"><a href="https://blcremationsystems.com/" target="_blank">B&L Cremation
             Systems</a></h4>
@@ -179,20 +172,16 @@
           in the world.
           We helped them create a new and dynamic website focusing on great user experience and accessibility. With
           strategic SEO and Digital marketing we were able to effectively increase traffic and sales.
-
         </p>
         <a href="https://blcremationsystems.com/" target="_blank">
           <button class="work__button btn">Visit Website </button>
         </a>
-
       </div>
       <a href="https://blcremationsystems.com/" target="_blank">
-        <img src="img/b&lmockup-min.png" alt="Work 2" class="work__img" data-aos="fade-up">
-
+        <img srcset="img/b&lmockup-min-small.png 600w, img/b&lmockup-min.png 1000w"
+          sizes="(max-width: 56.25em) 88vw, (max-width: 37.5em) 86vw, 1000px" alt="Work 2" class="work__img" data-aos="fade-up"
+          src="img/b&lmockup-min.png">
       </a>
-
-
-
       <div class="work__details" data-aos="fade-right">
         <h4 class="heading-4 heading-4--light"><a href="https://www.designershopp.com/"
             target="_blank">Designershopp</a></h4>
@@ -205,21 +194,16 @@
         <a href="https://www.designershopp.com/" target="_blank">
           <button class="work__button btn">Visit Website </button>
         </a>
-
       </div>
       <a href="https://www.designershopp.com/" target="_blank">
         <img src="img/designmockup-min.png" alt="Work 3" class="work__img" data-aos="fade-up">
-
+        <img srcset="img/designmockup-min-small.png 600w, img/designmockup-min.png 1000w"
+          sizes="(max-width: 56.25em) 88vw, (max-width: 37.5em) 86vw, 1000px" alt="Work 2" class="work__img" data-aos="fade-up"
+          src="img/designmockup-min.png">
       </a>
-
-
-
     </div>
   </section>
-  <div class="about__pictures">
-    <!-- <img src="img/img1.jpg" alt="Code" class="about__img--1" />
-    <img src="img/img5.jpg" alt="Design" class="about__img--2" /> -->
-  </div>
+  <div class="about__pictures"></div>
   <div class="about__content">
     <h3 class="heading-3 mb-sm-1">
       Creative and technical professionals ready to create
@@ -243,7 +227,6 @@
     <p class="about__text" data-aos="fade-right" data-aos-offset="120" data-aos-duration="800">
       <span class="bold">Deploy:</span> Final project review to full satisfaction and officially launched
     </p>
-
   </div>
   <section class="services">
     <div class="service" data-aos="fade-right" data-aos-offset="120" data-aos-duration="800">
@@ -306,24 +289,19 @@
         <input name="name" type="text" class="form__input" placeholder="Full name" id="name" required="required" />
         <label for="name" class="form__label">Full name</label>
       </div>
-
       <div class="form__group">
         <input name="email" name="_replyto" type="email" class="form__input" placeholder="Email address" id="email"
           required="required" />
         <label for="email" class="form__label">Email address</label>
       </div>
-
       <div class="form__group">
         <textarea name="message" rows="6" class="form__input" id="message" name="message"
           placeholder="Tell us about your project (Scope, timeline, budget, etc." name="message"
           required="required"></textarea>
         <label for="message" class="form__label"> Message</label>
       </div>
-
       <button class="form__btn btn">Send Request!</button>
-
     </form>
-
   </section>
   <footer class="footer">
     <ul class="nav">
@@ -345,5 +323,4 @@
   <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
   <script>AOS.init({duration: 1200,});</script>
 </body>
-
 </html>
