--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
     <h3 class="heading-1">Recent Work</h3>
     <div class="work__list">
       <div class="work__details" data-aos="fade-right">
-        <h4 class="heading-4 heading-4--light"><a href="https://thelightwalk.com/" target="_blank">The Light
+        <h4 class="heading-4 heading-4--light"><a href="https://thelightwalkshoes.com//" target="_blank">The Light
             Walk</a></h4>
         <h5 class="heading-5">Website Design & Development</h5>
         <p class="work__details">
@@ -155,11 +155,11 @@
           4Kreative we helped The Light Walk by building an online presence to drive traffic and conversions with their
           new custom built website.
         </p>
-        <a href="https://thelightwalk.com/" target="_blank">
+        <a href="https://thelightwalkshoes.com//" target="_blank">
           <button class="work__button btn">Visit Website </button>
         </a>
       </div>
-      <a href="https://thelightwalk.com/" target="_blank">
+      <a href="https://thelightwalkshoes.com//" target="_blank">
         <img srcset="img/lightmockup-min-small.png 600w, img/lightmockup-min.png 1000w"
           sizes="(max-width: 56.25em) 88vw, (max-width: 37.5em) 86vw, 1000px" alt="Work 2" class="work__img" data-aos="fade-up"
           src="img/lightmockup-min.png">
@@ -183,23 +183,28 @@
           src="img/b&lmockup-min.png">
       </a>
       <div class="work__details" data-aos="fade-right">
-        <h4 class="heading-4 heading-4--light"><a href="https://www.designershopp.com/"
-            target="_blank">Designershopp</a></h4>
+        <h4 class="heading-4 heading-4--light">
+          <!-- <a href="https://www.designershopp.com/"
+            target="_blank">
+
+          </a> -->
+          Designershopp
+          </h4>
         <h5 class="heading-5">Website Development & Ecommerce</h5>
         <p class="work__details">The Designershopp is an online clothing retailer. The company has been significantly
           growing, and needed our help with improving and redesigning their ecommerce website. We created an online
           store and an easy
           shopping experience for the users, further driving growth and sales.
         </p>
-        <a href="https://www.designershopp.com/" target="_blank">
+        <!-- <a href="https://www.designershopp.com/" target="_blank">
           <button class="work__button btn">Visit Website </button>
-        </a>
+        </a> -->
       </div>
-      <a href="https://www.designershopp.com/" target="_blank">
+      <!-- <a href="https://www.designershopp.com/" target="_blank"> -->
         <img srcset="img/designmockup-min-small.png 600w, img/designmockup-min.png 1000w"
           sizes="(max-width: 56.25em) 88vw, (max-width: 37.5em) 86vw, 1000px" alt="Work 2" class="work__img" data-aos="fade-up"
           src="img/designmockup-min.png">
-      </a>
+      <!-- </a> -->
     </div>
   </section>
   <div class="about__pictures"></div>
